--- a/index.html
+++ b/index.html
@@ -3,10 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Title</title>
+    <title>Rhythm</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/style/css/main.css">
 </head>
 <body>
+<header class="header">
+<!--Header-->
+<div class="container">
+    <div class="header__holder">
+        <a href="#" class="header__logo-link"><img src="src/img/logo.svg" alt="" class="header-logo"></a>
+        <div class="header__nav-holder">
+            <div class="header__nav">
+                <ul class="header__nav-list">
+                    <li class="header__nav-item"><a href="#" class="header__nav-link">Store</a></li>
+                    <li class="header__nav-item"><a href="#" class="header__nav-link">Collections</a></li>
+                    <li class="header__nav-item"><a href="#" class="header__nav-link">Support</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+</header>
+<main class="main">
+<!--Hero-->
+<section class="hero">
+    <div class="container">
+        <div class="hero__content-holder">
+            <div class="hero__title-holder">
+                <h1 class="hero__title">Browse top quality <span class="hero__orange-text">Guitars</span> online</h1>
+            </div>
+           <div class="hero__text"><span>Explore 50k+ latest collections of branded guitars online with Rhythm.</span></div>
+            <div class="hero__link-holder">
+                <a href="#" class="hero__button">Get the App</a>
+                <a href="#" class="hero__link-playmarket"><img src="src/img/playmarket-logo.svg" alt=""></a>
+                <a href="#" class="hero__link-apple"><img src="src/img/apple-logo.svg" alt=""></a>
+            </div>
+        </div>
+        <img src="src/img/hero-image.png" alt="" class="hero__image">
+    </div>
+</section>
+</main>
+<footer class="footer">
 
+</footer>
 </body>
 </html>
