--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container">
         <div class="hero__content-holder">
             <div class="hero__title-holder">
-                <h1 class="hero__title">Browse top quality <span class="hero__orange-text">Guitars</span> online</h1>
+                <h1 class="hero__title">Browse top quality <span class="orange-text">Guitars</span> online</h1>
             </div>
            <div class="hero__text"><span>Explore 50k+ latest collections of branded guitars online with Rhythm.</span></div>
             <div class="hero__link-holder">
@@ -43,6 +43,116 @@
             </div>
         </div>
         <img src="src/img/hero-image.png" alt="" class="hero__image">
+        <img src="src/img/hero-circle.svg" alt="" class="hero__circle">
+    </div>
+</section>
+<!--Store-->
+<section class="store">
+    <div class="container">
+        <div class="store__title-holder">
+            <h2 class="store__title">Check out the <span class="orange-text">Store</span></h2>
+        </div>
+        <div class="store__category-holder">
+            <span class="store__category">NEW ON THE BOARD</span>
+            <a href="#" class="store__view">view all</a>
+        </div>
+        <div class="store__column-holder">
+            <div class="store__column">
+                <img src="src/img/les-paul.png" alt="" class="store__image">
+                <div class="store__product-title"><span>The Essential Les Paul</span></div>
+                <div class="store__product-price"><span>$1,299.00</span></div>
+            </div>
+            <div class="store__column">
+                <img src="src/img/j-45.png" alt="" class="store__image">
+                <div class="store__product-title"><span>J-45 Standard</span></div>
+                <div class="store__product-price"><span>$$1,699.00</span></div>
+            </div>
+            <div class="store__column">
+                <img src="src/img/hummingbird.png" alt="" class="store__image">
+                <div class="store__product-title"><span>Hummingbird Standardl</span></div>
+                <div class="store__product-price"><span>$2,099.00</span></div>
+            </div>
+        </div>
+        <div class="store__category-holder">
+            <span class="store__category">TOP SELLING</span>
+            <a href="#" class="store__view">view all</a>
+        </div>
+        <div class="store__column-holder">
+            <div class="store__column">
+                <img src="src/img/precision-bass.png" alt="" class="store__image">
+                <div class="store__product-title"><span>Active Precision Bass® PH V</span></div>
+                <div class="store__product-price"><span>$4,199.00</span></div>
+            </div>
+            <div class="store__column">
+                <img src="src/img/redondo.png" alt="" class="store__image">
+                <div class="store__product-title"><span>Redondo Special</span></div>
+                <div class="store__product-price"><span>$2,800.00</span></div>
+            </div>
+            <div class="store__column">
+                <img src="src/img/stratocaster.png" alt="" class="store__image">
+                <div class="store__product-title"><span>Professional II Stratocaster®</span></div>
+                <div class="store__product-price"><span>$3,199.00</span></div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--Categories-->
+<section class="categories">
+    <div class="container">
+        <div class="categories__title-holder">
+            <h2 class="categories__title">Choose based on <span class="orange-text">Categories</span></h2>
+        </div>
+        <div class="categories__holder">
+            <a href="#" class="categories__link"><img src="src/img/acoustic.png" alt="" class="categories__image"></a>
+            <a href="#" class="categories__link"><img src="src/img/electric.png" alt="" class="categories__image"></a>
+            <a href="#" class="categories__link"><img src="src/img/basses.png" alt="" class="categories__image"></a>
+            <a href="#" class="categories__link"><img src="src/img/collections.png" alt="" class="categories__image"></a>
+        </div>
+    </div>
+</section>
+<!--Brands-->
+<section class="brands">
+    <div class="container">
+        <div class="brands__title-holder">
+            <h2 class="brands__title">Featuring the <span class="orange-text">Best Brands</span></h2>
+        </div>
+
+        <div class="brands__column">
+            <div class="brands__image-holder">
+                <img src="src/img/ibanez.svg" alt="" class="brands__image">
+            </div>
+            <div class="brands__image-holder">
+                <img src="src/img/martin.svg" alt="" class="brands__image">
+            </div>
+            <div class="brands__image-holder">
+                <img src="src/img/fender.svg" alt="" class="brands__image">
+            </div>
+            <div class="brands__image-holder">
+                <img src="src/img/gibson.svg" alt="" class="brands__image">
+            </div>
+        </div>
+        <div class="brands__column">
+            <div class="brands__image-holder">
+                <img src="src/img/taylor.png" alt="" class="brands__image">
+            </div>
+            <div class="brands__image-holder">
+                <img src="src/img/gretch.svg" alt="" class="brands__image-gretch">
+            </div>
+            <div class="brands__image-holder">
+                <img src="src/img/takamine.svg" alt="" class="brands__image">
+            </div>
+            <div class="brands__image-holder">
+                <img src="src/img/seagull.svg" alt="" class="brands__image">
+            </div>
+        </div>
+    </div>
+</section>
+<!--Why rhythm-->
+<section class="why-rhythm">
+    <div class="container">
+        <div class="why-rhythm__title-holder">
+            <h2 class="why-rhythm__title">Why try <span class="orange-text">Rhythm?</span></h2>
+        </div>
     </div>
 </section>
 </main>
